--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^2.1.2"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1",
     "postcss-cli": "^8.3.1"
   }
 }
